# snipe-tracker

./: .gitignore  README.md  id_ed25519.pub  id_ed25519.pub.pub  pyproject.toml  requirements.txt
src/: config.py  train.py
src/automation/: runner.py  setup.py
src/data/: collect_bulk.py  collector.py  game_results.py  history.py  injuries.py  nhl_api.py
src/features/: goalie_features.py  player_features.py  team_features.py
src/models/: evaluate.py  game_model.py  goal_model.py
src/notifications/: email_sender.py  settings.py  telegram_sender.py
src/predictions/: daily.py  grade.py  report.py  tracker.py
tests/: test_injuries.py  test_nhl_api.py  test_notifications.py
